mds/MDSMap: use find in is_data_pool

binary_search assumes that vector data_pools is ordered. add_data_pool
however only appends to the vector, so no order can be assumed.

Fixes: http://tracker.ceph.com/issues/20452

Signed-off-by: Jan Fajerski <jfajerski@suse.com>